proyecto: 01, fix, arreglar warnings (finals y variables sin uso)